depth tex clarification

--- a/src/content/docs/aperture/migration.mdx
+++ b/src/content/docs/aperture/migration.mdx
@@ -121,7 +121,7 @@ void main() {
 
 ## Buffers
 
-The depth textures are `depthTex` and `solidDepthTex`, replacing `depthtex0` and `depthtex1`. Note that `depthTex` is not available before translucents are rendered, so make sure to use `solidDepthTex` in this case.
+The depth textures are `mainDepthTex` and `solidDepthTex`, replacing `depthtex0` and `depthtex1`.
 
 ## Uniforms
 
