it doesn't like h1s

--- a/src/content/docs/aperture/migration.mdx
+++ b/src/content/docs/aperture/migration.mdx
@@ -166,7 +166,7 @@ float shadow = texture(shadowMap, vec4(shadowScreenPos.xy, cascade, shadowScreen
 
 ![](../../../assets/aperture/sampler2darrayshadow.webp)
 
-# Block IDs
+## Block IDs
 The `VertexData` object passed to `iris_sendParameters` has a `blockId` attribute. The following functions can be used on the ID:
 
 ```
