--- a/src/content/docs/current/Reference/Mod Support/vivecraft.mdx
+++ b/src/content/docs/current/Reference/Mod Support/vivecraft.mdx
@@ -5,7 +5,7 @@ sidebar:
   order: 1
 ---
 
-[Vivecraft](https://modrinth.com/mod/vivecraft) is a mod which allows to play Minecraft in VR. Vivecraft provides a few macros and uniforms to inform shaders about the current render state.  
+[Vivecraft](https://modrinth.com/mod/vivecraft) is a mod which allows Minecraft to be played in VR. Vivecraft provides a few macros and uniforms to inform shaders about the current render state.  
 Data mentioned here is managed by Vivecraft itself, so if any issues are encountered with it please report them on their [issue tracker](https://github.com/Vivecraft/VivecraftMod/issues)
 
 ## Definitions/Properties
