--- a/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
@@ -1,8 +1,8 @@
 ---
-title: Your First Post Processing Effect
+title: Your First Shader Effect
 description: Write a basic post processing effect in the `composite` pass.
 sidebar:
-  label: Your Post Processing First Effect
+  label: Your First Shader Effect
   order: 2
 ---
 
