--- a/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/1_composite.mdx
@@ -90,7 +90,7 @@ This gives us the 'texture coordinate' of the current vertex. This is more commo
 In the previous line of code, you might have noticed some weird syntax: `.xy`. This is an operation unique to shading languages known as *swizzling*. You can read more about swizzling [here](https://www.khronos.org/opengl/wiki/Data_Type_(GLSL)#Swizzling).
 :::
 
-Let's open `composite.fsh`. This is the *fragment shader*	It runs for every pixel on the screen.
+Let's open `composite.fsh`. This is the *fragment shader*, meaning it runs for every pixel on the screen.
 
 Right now the code looks like this
 
@@ -140,7 +140,7 @@ This declares a variable `color` which at the end of the shader will be written 
 color = texture(colortex0, texcoord);
 ```
 
-This reads the value in `colortex0` at position `texcoord` and stores it in `color`. For more info see [the OpenGL docs](https://registry.khronos.org/OpenGL-Refpages/gl4/html/texture.xhtml).
+This reads the value in `colortex0` at position `texcoord` and stores it in `color`. For more info, see [the OpenGL docs](https://registry.khronos.org/OpenGL-Refpages/gl4/html/texture.xhtml).
 
 ## Making It Grayscale
 A color is grayscale when the r, g, and b components all have the same value. We can compute this value by taking the dot product of the original color and a `vec3(1.0/3.0)`. This is mathematically equivalent to multiplying each channel by 1/3 and then summing the products together. If we set the r, g, and b channels of `color` to this value, the resulting image will be converted to grayscale.
