--- a/src/content/docs/current/Guides/Your First Shader/3_composite_lighting.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/3_composite_lighting.mdx
@@ -32,7 +32,7 @@ Because `colortex` buffers are designed to hold gamma corrected colors, you will
 
 ```glsl
 /*
-const int colortex0Format = RGBA16;
+const int colortex0Format = RGB16;
 */
 ```
 
