Update src/content/docs/current/Guides/Your First Shader/3_composite_lighting.mdx
Co-authored-by: Josh Britain <50422789+jbritain@users.noreply.github.com>

--- a/src/content/docs/current/Guides/Your First Shader/3_composite_lighting.mdx
+++ b/src/content/docs/current/Guides/Your First Shader/3_composite_lighting.mdx
@@ -42,7 +42,7 @@ Observe that the declaration for the format is in a *multi-line comment*. This i
 The following is *not valid!* The declaration must be on its own line.
 
 ```glsl
-// const int colortex0Format = RGB16F;
+// const int colortex0Format = RGB16;
 ```
 :::
 
